Bug 475050 - Sometimes the home page erroneously claims a lack of network connectivity
Summary: Sometimes the home page erroneously claims a lack of network connectivity
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.27.8
Platform: Neon Linux
: HI major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 480719 483603 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-30 13:19 UTC by domojestic
Modified: 2024-06-26 03:21 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
What the Discover Homepage looks like (58.16 KB, image/png)
2023-09-30 13:19 UTC, domojestic
Details

Note You need to log in before you can comment on or make changes to this bug.
Description domojestic 2023-09-30 13:19:31 UTC
Created attachment 161973 [details]
What the Discover Homepage looks like

SUMMARY
I've just installed a fresh KDE Neon instance onto my laptop with the hopes of migrating from Kubuntu, but with newer KDE software. Unfortunately, I've run into two bugs, one of which I'm mentioning here (the other is just that the KDE Neon staart symbol turns into the KDE multicolored logo when trying to set it to my app launcher symbol, but that's besides the point). When I open Discover, the Home page tells me that I'm not connected, and the "Editor's choice" thing is weirdly not at the top of the window, possibly because of some default reserved space I don't know about. Everything else about Discover is seemingly working fine, it's *just* the Home page that isn't working. Per the recommendation of a different user with a similar bug but on Arch (and from a while ago), I tried reinstalling appstream, but that just broke Discover altogether with no way to fix it. So, I tried reinstalling again, and the original issue persisted.

This is the laptop I intend to use for school, so I'm hoping this issue isn't all that important. Though worst-case scenario, I'll just switch back to Kubuntu LTS. I still get KDE, so I'm happy.


STEPS TO REPRODUCE
1. Download the current available Neon iso from official page and install to computer
2. Open Discover

OBSERVED RESULT
Home reports connectivity errors, everything else is fine.

EXPECTED RESULT
Discover works as intended (home page loads apps)

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 5.27.8
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-10-12 19:03:37 UTC
If you switch to another page (e.g. "Installed") and then back to "Home", does it start showing content?
Comment 2 Nate Graham 2023-10-12 19:04:15 UTC
And have you by any chance disabled NetworkManager and started to manage network connections via another method?
Comment 3 domojestic 2023-10-21 23:21:56 UTC
(In reply to Nate Graham from comment #1)
> If you switch to another page (e.g. "Installed") and then back to "Home",
> does it start showing content?

Unfortunately I tried this, and no dice.

(In reply to Nate Graham from comment #2)
> And have you by any chance disabled NetworkManager and started to manage
> network connections via another method?

Unless this occurs on install, no. Basically the first thing I did after booting for the first time was open Discover (as I was curious to see the 5.27 changes made to the new Home page) and that's what I saw.

Also, because this is the machine I use for school, I had to end up switching to Kubuntu, so I don't think I can give more information on the bug and its behavior anymore. I apologize for the inconvenience. Should I close this bug thread?
Comment 4 Nate Graham 2023-10-23 18:31:48 UTC
Thanks for the info.
Comment 5 Nate Graham 2024-02-07 17:32:08 UTC
*** Bug 480719 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2024-05-13 16:07:03 UTC
*** Bug 483603 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2024-05-13 16:08:22 UTC
In progress with https://invent.kde.org/plasma/discover/-/merge_requests/840.
Comment 8 Harald Sitter 2024-06-24 14:45:49 UTC
Git commit 0c0bfd43f1a173397e69dad631c4018d9c28eb5a by Harald Sitter.
Committed on 24/06/2024 at 14:28.
Pushed by sitter into branch 'master'.

packagekit: consider a not running daemon a dysfunction

this in particular prevents us from incorrectly presenting network
connectivy (from the AbstractResourcesBackend) as dysfunction when the
more topical lack of packagekitd was detected.

M  +20   -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +1    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.h

https://invent.kde.org/plasma/discover/-/commit/0c0bfd43f1a173397e69dad631c4018d9c28eb5a