packagekit: consider a not running daemon a dysfunction

this in particular prevents us from incorrectly presenting network
connectivy (from the AbstractResourcesBackend) as dysfunction when the
more topical lack of packagekitd was detected.

BUG: 475050