libdiscover/backends/PackageKitBackend/PackageKitBackend.h
@@ -190,4 +190,5 @@ private:
     QPointer<PKResolveTransaction> m_resolveTransaction;
     QStringList m_globalHints;
     bool m_allPackagesLoaded = false;
+    DiscoverAction *m_reportToDistroAction;
 };
